# feta

./: CMakeLists.txt  README-el.md  README.md  dict.txt
assets/: syllable-dict.txt  test-text.txt
src/: counter.c  feta.h  letter.c  letter.h  syllable.c  syllable.h  tables.c  tables.h  win32.h
src/checker/: checker.c  exceptions.h  mistake.c  mistake.h
src/counter/: counter.c
src/tester/: tester.c
